fix: allow scroll for navbar on small screens

--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -25,6 +25,7 @@
       flex-direction: row;
       justify-content: space-evenly;
       align-items: center;
+      overflow-x: auto;
     }
   }
 }
